--- a/ui/espresso/BasicSample/build.gradle
+++ b/ui/espresso/BasicSample/build.gradle
@@ -19,7 +19,7 @@ allprojects {
 }
 
 ext {
-    buildToolsVersion = "24.0.1"
+    buildToolsVersion = '25.0.0'
     supportLibVersion = "24.2.0"
     runnerVersion = "0.5"
     rulesVersion = "0.5"
