--- a/ui/espresso/BasicSample/app/build.gradle
+++ b/ui/espresso/BasicSample/app/build.gradle
@@ -22,7 +22,7 @@ android {
 dependencies {
     // App dependencies
     compile 'com.android.support:support-annotations:25.3.1'
-    compile 'com.google.guava:guava:18.0'
+    //compile 'com.google.guava:guava:18.0'
     // Testing-only dependencies
     // Force usage of support annotations in the test app, since it is internally used by the runner module.
     androidTestCompile 'com.android.support:support-annotations:25.3.1'
